# Sports-App

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/db/: connect_db.py  database.py
app/db/crud/: locationcrud.py  sporstcrud.py  usercrud.py
app/db/models/: locationmodel.py  sportsmodel.py  usermodel.py
app/db/schemas/: location_schema.py  sports_schema.py  users_schema.py
app/handlers/: email.py
app/routers/: authentication.py  home.py  locations.py  sports.py
