[tool.poetry]
name = "sports-app"
version = "0.1.0"
description = ""
authors = ["Domnic <amalandomnic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi_mail = "^0.2.5"
fastapi = "^0.109.1"
uvicorn = "^0.11.5"
sqlalchemy = "^1.3.18"
psycopg2 = "^2.8.5"
passlib = "^1.7.2"
bcrypt = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
